fix /ec when player is disconnected